# vm-virtio

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  coverage_config_aarch64.json  coverage_config_x86_64.json
.buildkite/: custom-pipeline.yml  custom-tests.json  pipeline.yml
.cargo/: audit.toml
.github/: dependabot.yaml  dependabot.yml
benches/queue/: mock.rs  mod.rs
crates/devices/virtio-blk/: Cargo.toml
crates/devices/virtio-blk/src/: defs.rs  lib.rs  request.rs  stdio_executor.rs
crates/devices/virtio-console/: Cargo.toml
crates/devices/virtio-console/src/: console.rs  lib.rs
crates/devices/virtio-vsock/: CHANGELOG.md  Cargo.toml  README.md
crates/devices/virtio-vsock/src/: lib.rs  packet.rs
crates/virtio-bindings/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/virtio-bindings/src/: lib.rs  virtio_blk.rs  virtio_config.rs  virtio_gpu.rs  virtio_mmio.rs  virtio_net.rs  virtio_ring.rs
crates/virtio-bindings/src/bindings_v5_0_0/: mod.rs
crates/virtio-bindings/src/virtio_net/: generated.rs
crates/virtio-device/: Cargo.toml
crates/virtio-device/src/: lib.rs  mmio.rs  virtio_config.rs
crates/virtio-queue/: CHANGELOG.md  Cargo.toml  README.md
crates/virtio-queue-ser/: CHANGELOG.md  Cargo.toml
crates/virtio-queue-ser/src/: lib.rs  state.rs
crates/virtio-queue/benches/queue/: mock.rs  mod.rs
crates/virtio-queue/src/: chain.rs  defs.rs  descriptor.rs  generic.rs  iterator.rs  lib.rs  mock.rs  queue.rs  queue_guard.rs  queue_sync.rs  state.rs  state_sync.rs
fuzz/: Cargo.toml  README.md
fuzz/common/: Cargo.toml
fuzz/common/src/: blk.rs  lib.rs  virtio_queue.rs  virtio_queue_ser.rs  vsock.rs
fuzz/fuzz_targets/: blk.rs  virtio_queue.rs  virtio_queue_fuzz_target.rs  virtio_queue_ser.rs  vsock.rs
fuzz/src/: lib.rs
src/: device.rs  error.rs  lib.rs  queue.rs
src/block/: defs.rs  mod.rs  request.rs  stdio_executor.rs
src/device/: mmio.rs  mod.rs  virtio_config.rs
src/queue/: config.rs  descriptor.rs  descriptor_chain.rs  iterator.rs  mod.rs  sinker.rs  source.rs
tests/: coverage
virtio-bindings/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  import-linux-headers.sh
virtio-bindings/include/linux/: if_ether.h  types.h  virtio_blk.h  virtio_config.h  virtio_gpu.h  virtio_input.h  virtio_net.h  virtio_ring.h  virtio_scsi.h  virtio_types.h
virtio-bindings/scripts/: generate-bindings.sh
virtio-bindings/src/: lib.rs  virtio_blk.rs  virtio_config.rs  virtio_gpu.rs  virtio_ids.rs  virtio_input.rs  virtio_mmio.rs  virtio_ring.rs  virtio_scsi.rs
virtio-bindings/src/bindings/hexagon/: virtio_gpu.rs  virtio_input.rs  virtio_net.rs
virtio-bindings/src/bindings/m68k/: virtio_blk.rs  virtio_gpu.rs  virtio_input.rs  virtio_net.rs  virtio_ring.rs
virtio-bindings/src/bindings/mips/: virtio_gpu.rs
virtio-bindings/src/bindings/mips32r6/: virtio_net.rs
virtio-bindings/src/bindings/powerpc/: virtio_gpu.rs
virtio-bindings/src/bindings/powerpc64le/: virtio_blk.rs  virtio_config.rs  virtio_input.rs  virtio_mmio.rs  virtio_net.rs  virtio_ring.rs  virtio_scsi.rs
virtio-bindings/src/bindings/riscv32/: virtio_ring.rs
virtio-bindings/src/bindings/s390x/: virtio_ids.rs
virtio-bindings/src/bindings/sparc/: virtio_ids.rs
virtio-bindings/src/bindings/x86/: virtio_blk.rs  virtio_gpu.rs  virtio_net.rs  virtio_ring.rs
virtio-bindings/src/bindings/x86_64/: virtio_net.rs
virtio-bindings/src/virtio_net/: generated.rs  mod.rs
virtio-blk/: Cargo.toml
virtio-blk/src/: lib.rs  request.rs  stdio_executor.rs
virtio-console/: Cargo.toml
virtio-console/src/: console.rs
virtio-device/: Cargo.toml
virtio-device/src/: virtio_config.rs
virtio-queue/: CHANGELOG.md  Cargo.toml  README.md
virtio-queue-ser/: CHANGELOG.md  Cargo.toml  README.md
virtio-queue-ser/src/: lib.rs  state.rs
virtio-queue/benches/queue/: mod.rs
virtio-queue/src/: chain.rs  defs.rs  descriptor_utils.rs  lib.rs  mock.rs  queue.rs  queue_sync.rs  state.rs
virtio-queue/src/desc/: mod.rs  packed.rs  split.rs
virtio-queue/src/queue/: verification.rs
virtio-vsock/: CHANGELOG.md  Cargo.toml  README.md
virtio-vsock/src/: lib.rs  packet.rs  packet_rw.rs
