[package]
name = "vm-virtio"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
description = "virtio specification implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
byteorder = ">=1.2.1"
libc = ">=0.2.39"
log = ">=0.4.6"
vm-memory = ">=0.4.0"
vmm-sys-util = ">=0.4.0"

[dev-dependencies]
criterion = "0.3.0"
vm-memory = { version = ">=0.4.0", features = ["backend-mmap", "backend-atomic" ] }

[[bench]]
name = "main"
harness = false

[profile.bench]
lto = true
codegen-units = 1
