[workspace]
resolver = "2"
members = [
    "virtio-bindings",
    "virtio-blk",
    "virtio-console",
    "virtio-device",
    "virtio-queue",
    "virtio-queue-ser",
    "virtio-vsock",
]

[profile.bench]
lto = true
codegen-units = 1

[workspace.dependencies]
vm-memory = "0.16.0"
vmm-sys-util = "0.13.0"
