[workspace]
resolver = "2"
members = [
    "virtio-bindings",
    "virtio-blk",
    "virtio-console",
    "virtio-device",
    "virtio-queue",
    "virtio-queue-ser",
    "virtio-vsock",
]

[profile.bench]
lto = true
codegen-units = 1

[workspace.dependencies]
vm-memory = "0.17.1"
vmm-sys-util = "0.15.0"
