[package]
name = "virtio-bindings"
version = "0.2.3"
authors = ["Sergio Lopez <slp@redhat.com>"]
description = "Rust FFI bindings to virtio generated using bindgen."
repository = "https://github.com/rust-vmm/vm-virtio"
readme = "README.md"
edition = "2021"
keywords = ["virtio"]
license = "BSD-3-Clause OR Apache-2.0"

[features]
# Kernel version features are deprecated and no longer have any effect,
# as the kernel headers are backwards compatible.
virtio-v4_14_0 = []
virtio-v5_0_0 = []

[dependencies]
