[package]
name = "virtio-bindings"
version = "0.2.6"
authors = ["Sergio Lopez <slp@redhat.com>"]
description = "Rust FFI bindings to virtio generated using bindgen."
repository = "https://github.com/rust-vmm/vm-virtio"
readme = "README.md"
edition = "2021"
keywords = ["virtio"]
license = "BSD-3-Clause OR Apache-2.0"

[features]

[dependencies]
