[package]
name = "virtio-queue-ser"
version = "0.14.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "Serialization for virtio queue state"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["queue", "serialization", "versioning"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
serde = { version = "1.0.27", features = ["derive"] }
versionize = "0.2.0"
versionize_derive = "0.1.3"
# The `path` part gets stripped when publishing the crate.
# We use strict version dependencies (`=x.y.z`) as we maintain a
# 1:1-relationship between virtio-queue and virtio-queue-ser releases. This is
# to prevent accidental changes to the serializer output in a patch release of
# virtio-queue.
virtio-queue = { path = "../virtio-queue", version = "=0.17.0" }
vm-memory = { workspace = true }

[dev-dependencies]
virtio-queue = { path = "../virtio-queue", version = "=0.17.0", features = ["test-utils"] }
