[package]
name = "virtio-queue"
version = "0.14.0"
authors = ["The Chromium OS Authors"]
description = "virtio queue implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2021"

[features]
test-utils = []

[dependencies]
vm-memory = {  version = "0.15.0", features = ["backend-mmap", "backend-bitmap"] }
vmm-sys-util = { workspace = true }
log = "0.4.17"
libc = "0.2.161"
virtio-bindings = { path="../virtio-bindings", version = "0.2.5" }

[dev-dependencies]
criterion = "0.5.1"
vm-memory = {  version = "0.15.0", features = ["backend-mmap", "backend-bitmap", "backend-atomic"] }
memoffset = "0.9.0"

[[bench]]
name = "main"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
