[package]
name = "virtio-queue"
version = "0.15.0"
authors = ["The Chromium OS Authors"]
description = "virtio queue implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2021"

[features]
test-utils = []

[dependencies]
vm-memory = { workspace = true }
vmm-sys-util = { workspace = true }
log = "0.4.17"
virtio-bindings = { path="../virtio-bindings", version = "0.2.5" }

[dev-dependencies]
criterion = "0.6.0"
vm-memory = { workspace = true, features = ["backend-mmap", "backend-atomic"] }
memoffset = "0.9.0"

[[bench]]
name = "main"
harness = false
