[package]
name = "virtio-vsock"
version = "0.10.0"
authors = ["rust-vmm community", "rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "virtio vsock device implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio", "vsock"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
# The `path` part gets stripped when publishing the crate.
virtio-queue = { path = "../virtio-queue", version = "0.16.0" }
virtio-bindings = { path = "../virtio-bindings", version = "0.2.6" }
vm-memory = { workspace = true }

[dev-dependencies]
virtio-queue = { path = "../virtio-queue", version = "0.16.0", features = ["test-utils"] }
vm-memory = { workspace = true, features = ["backend-mmap", "backend-atomic"] }
