[package]
name = "virtio-device"
version = "0.1.0"
authors = ["The Chromium OS Authors"]
description = "virtio generic device implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies]
vm-memory = "0.6.0"
log = ">=0.4.6"
virtio-queue = { path = "../virtio-queue" }

[dev-dependencies]
vm-memory = { version = "0.6.0", features = ["backend-mmap", "backend-atomic"] }
