[package]
name = "virtio-queue-ser"
version = "0.3.0"
authors = ["rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "Serialization for virtio queue state"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["queue", "serialization", "versioning"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
serde = { version = "1.0.27", features = ["derive"] }
versionize = "0.1.6"
versionize_derive = "0.1.3"
# The `path` part gets stripped when publishing the crate.
virtio-queue = { path = "../../crates/virtio-queue", version = "=0.7.0" }
vm-memory = "0.10.0"
