[package]
name = "virtio-queue"
version = "0.3.0"
authors = ["The Chromium OS Authors"]
description = "virtio queue implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[features]
test-utils = []

[dependencies]
vm-memory = ">=0.8.0"
vmm-sys-util = ">=0.8.0"
log = ">=0.4.6"

[dev-dependencies]
criterion = "0.3.0"
vm-memory = { version = ">=0.8.0", features = ["backend-mmap", "backend-atomic"] }
memoffset = "~0"

[[bench]]
name = "main"
harness = false
