[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = "1.0.63"
virtio-bindings = { path = "../../virtio-bindings" }
virtio-queue = { path = "../../virtio-queue", features = ["test-utils"] }
virtio-vsock = { path = "../../virtio-vsock" }
virtio-queue-ser = { path = "../../virtio-queue-ser" }
virtio-blk = { path = "../../virtio-blk" }
vm-memory = { version = "0.15.0", features = ["backend-mmap", "backend-atomic"] }
