[package]
name = "virtio-console"
version = "0.1.0"
authors = ["rust-vmm community", "rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "virtio console device implementation"
repository = "https://github.com/RaduNiculae/vm-virtio"
keywords = ["virtio", "console"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"


[dependencies]
virtio-queue = { path = "../../virtio-queue" }
vm-memory = "0.8.0"
