[package]
name = "virtio-vsock"
version = "0.1.0"
authors = ["rust-vmm community", "rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "virtio vsock device implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio", "vsock"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2018"

[dependencies]
virtio-queue = { path = "../../virtio-queue" }
vm-memory = ">=0.8.0"

[dev-dependencies]
virtio-queue = { path = "../../virtio-queue", features = ["test-utils"] }
vm-memory = { version = ">=0.8.0", features = ["backend-mmap", "backend-atomic"] }
