[package]
name = "virtio-vsock"
version = "0.4.0"
authors = ["rust-vmm community", "rust-vmm AWS maintainers <rust-vmm-maintainers@amazon.com>"]
description = "virtio vsock device implementation"
repository = "https://github.com/rust-vmm/vm-virtio"
keywords = ["virtio", "vsock"]
readme = "README.md"
license = "Apache-2.0 OR BSD-3-Clause"
edition = "2021"

[dependencies]
# The `path` part gets stripped when publishing the crate.
virtio-queue = { path = "../../virtio-queue", version = "0.10.0" }
virtio-bindings = { path = "../../virtio-bindings", version = "0.2.2" }
vm-memory = "0.13.1"

[dev-dependencies]
virtio-queue = { path = "../../virtio-queue", version = "0.10.0", features = ["test-utils"] }
vm-memory = { version = "0.13.1", features = ["backend-mmap", "backend-atomic"] }
